resolve internal API warning for BASE64Encoder